--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TrackerActivity">
+        <activity android:name="activities.TrackerActivity">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,7 @@
         </activity>
 
         <service
-            android:name=".TrackerService"
+            android:name="service.TrackerService"
             android:enabled="true"
             android:exported="true"/>
         <!--
@@ -37,7 +37,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".DisplayActivity"
+            android:name="activities.DisplayActivity"
             android:label="@string/title_activity_display">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
