--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,12 +39,22 @@
         <activity
             android:name="activities.DisplayActivity"
             android:label="@string/title_activity_display">
+
+        </activity>
+
+
+        <activity android:name="activities.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity android:name="activities.SignupActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
