--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -36,6 +39,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <provider
+            android:name="utils.MyFileContentProvider"
+            android:authorities="${applicationId}"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity
             android:name="activities.DisplayActivity"
             android:label="@string/title_activity_display">
@@ -57,6 +66,9 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name="activities.Activity_Homescreen"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name="activities.SubmitAttendanceActivity"
             android:screenOrientation="portrait"/>
     </application>
 
