--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,10 @@
 
         <activity android:name="activities.SubmitAttendanceActivity"
             android:screenOrientation="portrait"/>
+
+        <activity android:name="activities.Activity_Profile"
+            android:screenOrientation="portrait"
+            android:theme="@style/UserDialog"/>
     </application>
 
 </manifest>
