--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,9 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden"
             android:theme="@style/UserDialog"/>
+
+        <activity android:name="activities.Activity_EmplyoeeList"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
